<resources>
    <string name="app_name">OCR</string>
    <string name="take_photo">拍照</string>
    <string name="album">相册</string>
    <string name="choosepic">选择相片</string>
    <string name="back">返回</string>
    <string name="certain">确定</string>
    <string name="show_result">结果</string>
    <string name="cancel">取消</string>
    <string name="username">输入用户名</string>
    <string name="password">输入密码</string>
    <string name="log_in">登陆</string>
    <string name="register">注册</string>
    <string name="password_again">再次输入密码</string>
    <string name="confirm_code">输入验证码</string>
    <string name="myself">个人界面</string>
    <string name="cuotiben">错题本</string>
    <string name="xuexizhoubao">学习周报</string>
    <string name="self_info">个人信息</string>
    <string name="setting">设置</string>
    <string name="baby_nickname">宝贝昵称</string>
    <string name="nickname">昵称</string>
</resources>
