<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seashell"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/regLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:background="@color/white"
            android:id="@+id/editTextRegUsername"
            android:textColor="@color/black"
            android:hint="@string/username"
            android:maxLines="1"
            android:textColorHint="@color/grey"
            android:layout_margin="10sp"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <EditText
            android:background="@color/white"
            android:id="@+id/editTextRegPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:hint="@string/password"
            android:maxLines="1"
            android:layout_margin="10sp"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <EditText
            android:background="@color/white"
            android:id="@+id/editTextRegPasswordAgain"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:hint="@string/password_again"
            android:maxLines="1"
            android:layout_margin="10sp"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirmCodeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regLinear">

        <ImageView
            android:id="@+id/confirmCodeImage"
            android:layout_margin="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:layout_weight="1"/>

        <EditText
            android:layout_weight="1"
            android:id="@+id/editTextRegConfirm"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:hint="@string/confirm_code"
            android:maxLines="1"
            android:layout_margin="10sp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/button_reg_fragment"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:background="@drawable/button_photo_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"/>

</RelativeLayout>