<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/seashell"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logImage"
        android:src="@drawable/main_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:layout_margin="50sp"
         />
    <EditText
        android:layout_below="@+id/logImage"
        android:background="@color/white"
        android:textColor="@color/black"
        android:id="@+id/editTextLogInUsername"
        android:inputType="text"
        android:hint="@string/username"
        android:maxLines="1"
        android:textColorHint="@color/grey"
        android:layout_margin="10sp"
        android:layout_width="match_parent"
        android:layout_height="40sp" />
    <EditText
        android:background="@color/white"
        android:id="@+id/editTextLogInPassword"
        android:inputType="text"
        android:textColor="@color/black"
        android:layout_below="@+id/editTextLogInUsername"
        android:textColorHint="@color/grey"
        android:maxLines="1"
        android:hint="@string/password"
        android:layout_margin="10sp"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        tools:ignore="TextFields" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400sp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <Button
            android:id="@+id/button_login_fragment"
            android:background="@drawable/button_photo_selector"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:text="@string/log_in"/>
        <Button
            android:id="@+id/button_reg_fragment"
            android:background="@drawable/button_photo_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:text="@string/register"/>
    </LinearLayout>

</RelativeLayout>