<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_choosePic_popUpWindow_take_photo"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/take_photo"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="24sp"
            android:layout_margin="10sp"/>
    </RelativeLayout>
    <View
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <RelativeLayout
        android:id="@+id/layout_choosePic_popUpWindow_album"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/album"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="24sp"
            android:layout_margin="10sp"/>
    </RelativeLayout>
    <View
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <RelativeLayout
        android:id="@+id/layout_choosePic_popUpWindow_cancel"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="24sp"
            android:layout_margin="10sp"/>
    </RelativeLayout>
</LinearLayout>