<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seashell"
    android:orientation="vertical"
    tools:context=".EditNicknameActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        tools:ignore="MissingConstraints">
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:layout_margin="16sp"
            android:contentDescription="@string/back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baby_nickname"
            android:textColor="@color/seashell"
            android:layout_centerInParent="true"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/editNicknameButton"
            android:layout_alignParentRight="true"
            android:layout_margin="10sp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text_edit_nickname"
            android:layout_margin="10sp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/editTestNickname"
            android:layout_width="240sp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="52dp"
            android:textColor="@color/black"
            android:layout_toRightOf="@+id/text_edit_nickname"
            android:background="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>